unpackaged/main/default/objects/Attendee__c/Attendee__c.object-meta.xml
<CustomObject>
    <description>Initially created to be used with the Single Barrel Program Trips the the distillery's.  Stores the names of the people attending a trip to the distillery.</description>
    <label>Attendee</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Attendee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>