unpackaged/main/default/objects/Attendee__c/fields/Incoming_Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Arrival_Time__c</fullName>
    <label>Incoming_Arrival Time</label>
    <type>DateTime</type>
</CustomField>