unpackaged/main/default/objects/Attendee__c/fields/Incoming_Departure_City__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Departure_City__c</fullName>
    <label>Incoming Departure City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>