unpackaged/main/default/objects/Attendee__c/fields/Outgoing_Airline__c.field-meta.xml
<CustomField>
    <fullName>Outgoing_Airline__c</fullName>
    <label>Outgoing Airline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>